# datart-webchat

./: .gitignore  README.md  docker-compose.yml  tests.sh
backend/: Dockerfile  alembic.ini  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_performance_indexes.py  0003_fix_author_nullable.py  0004_personal_chat_fks_set_null.py
backend/app/: main.py
backend/app/api/v1/: deps.py
backend/app/api/v1/endpoints/: auth.py  files.py  friends.py  messages.py  rooms.py  users.py
backend/app/core/: cache.py  config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  models.py
backend/app/schemas/: schemas.py
backend/app/websocket/: handler.py  manager.py
backend/app/worker/: celery_app.py  tasks.py
backend/tests/: conftest.py  test_auth.py  test_edge_cases.py  test_friends.py  test_messages.py  test_rooms.py  test_security.py
frontend/: index.html  package.json  vite.config.js
frontend/src/api/: client.js
frontend/src/assets/: style.css
frontend/src/components/chat/: MessageInput.vue  MessageList.vue  SidebarPanel.vue
frontend/src/components/common/: NotificationToast.vue
frontend/src/components/contacts/: AddFriendModal.vue  PendingRequestsModal.vue
frontend/src/router/: index.js
frontend/src/stores/: auth.js  chat.js  friends.js  socket.js
frontend/src/views/: ChatLayout.vue  LoginView.vue  PersonalChatView.vue  RegisterView.vue  RoomView.vue  RoomsView.vue  SettingsView.vue
nginx/: nginx.conf
(+3 files in other folders)
